added instructions on homepage

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
 		<script src="./js/main.js"></script>
 	</head>
 	<body>
-	
+		<h1>Instructions to play the game</h1>
+		<ol>
+			<li>Right-Click on the webpage</li>
+			<li>Select 'Inspect'</li>
+			<li>Select 'Console</li>
+		</ol>
+		<p>You might have to spam 5 values before getting to it though</p>
 	</body>
 </html>
