--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
 		<script src="./js/main.js"></script>
 	</head>
 	<body>
-		<h1>Instructions to play the game</h1>
-		<ol>
-			<li>Right-Click on the webpage</li>
-			<li>Select 'Inspect'</li>
-			<li>Select 'Console</li>
-		</ol>
-		<p>You might have to spam 5 values before getting to it though</p>
+		<h1>Welcome to Rock Paper Scissors</h1>
+		<p>Rules are simple:</p>
+		<ul>
+			<li>Rock beats scissors</li>
+			<li>Scissors beats paper</li>
+			<li>Paper beats rock</li>
+		</ul>
+		<p>You have 5 rounds!</p>
 	</body>
 </html>
