--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,21 @@
 			<li>Paper beats rock</li>
 		</ul>
 		<p>You have 5 rounds!</p>
+		<div>
+			<div class="score-box">
+				<p>Your Score</p>
+				<h2 id="player-score"></h2>
+			</div>
+			<div class="score-box">
+				<p>Computer's Score</p>
+				<h2 id="compputer-score"></h2>
+			</div>
+		</div>
+		<div id="winner"></div>
+		<div id="options">
+			<button>Rock</button>
+			<button>Paper</button>
+			<button>Scissors</button>
+		</div>
 	</body>
 </html>
