--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Rock Paper Scissors</title>
 		<script src="./js/main.js"></script>
+		<link rel="stylesheet" href="./style/style.css">
 	</head>
 	<body>
 		<h1>Welcome to Rock Paper Scissors</h1>
@@ -14,17 +15,17 @@
 			<li>Paper beats rock</li>
 		</ul>
 		<p>You have 5 rounds!</p>
-		<div>
+		<div class="container">
 			<div class="score-box">
-				<p>Your Score</p>
-				<h2 id="player-score"></h2>
+				<h1>Your Score</h1>
+				<h2 id="player-score">0</h2>
 			</div>
 			<div class="score-box">
-				<p>Computer's Score</p>
-				<h2 id="compputer-score"></h2>
+				<h1>Computer's Score</h1>
+				<h2 id="computer-score">0</h2>
 			</div>
 		</div>
-		<div id="winner"></div>
+		<div id="winner"><h1>Test</h1></div>
 		<div id="options">
 			<button>Rock</button>
 			<button>Paper</button>
