add instruction in html

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 			<li>Paper beats rock</li>
 		</ul>
 		<p>First to 5 wins!</p>
+		<p>Refresh the page to restart</p>
 		<div class="container">
 			<div class="score-box">
 				<h1>Your Score</h1>
